Add panic button feature

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                     es el proceso en el que se trata las necesidades encontradas
                     en el proceso de evaluación psicológica.<br> &nbsp;
                 </li>
+                <li type="square", class="help_list">
+                    Contamos con un botón de pánico en donde podrás contactar rápidamente a un doctor para solucionar
+                    tus problemas psicológicos<br> &nbsp;
+                </li>
                 <a href="https://psychohelp-2021.web.app/login_patient" class="btn body-btn">Inicia sesión</a>
             </div>
             <div class="image-group1">
